fix: return for linear equations result